# jaxSMC

./: .gitignore  LICENSE  pyproject.toml
adaptive_smc/: SMC.py  criteria_functions.py  estimates.py  optimise.py  save_and_read_and_postprocess.py  utils.py
adaptive_smc/experiments/Complexity_of_SMC/: 4.py  4.yaml  4_price_paid_by_M.py  4_smc.py  Fig1.ipynb  greedy_xp.py  greedy_xp.yaml  heavy_tail_increment_weights_gaussians.py
adaptive_smc/experiments/aRWM/: exp_rw_g_to_g_target_acceptance_across_dim.py  exp_rw_gaussian_target_acceptance.py  exp_rw_gaussian_to_gaussian.py  problem.py
adaptive_smc/experiments/aRWM/rw_g_to_g_fig1/: esjd_theta_star.ipynb
adaptive_smc/experiments/aRWM/target_ar_rwm_across_dim_1_to_10/: AR.ipynb  esjd_theta_star.ipynb
adaptive_smc/experiments/comparison/anisotropic_gaussian/: g_ar_rw_uncoupled.py  problem.py
adaptive_smc/experiments/comparison/logistic_regression/Sonar/: sonar.py
adaptive_smc/experiments/pCN/autoregressive_parameter_trajectory/: esjd_theta_star.ipynb  pCN_rho_trajectory.py
adaptive_smc/experiments/pCN/pCN_IMH_frontier/: exp_gaussian_potential.py  exp_gaussian_vanishing_potential.py
adaptive_smc/experiments/pCNL/: exp_pcnl_gaussian.py  exp_pcnl_gaussian.yaml  heatmap_esjd.ipynb
adaptive_smc/experiments/pCN_uncoupled/: exp_pcn_gaussian.py  exp_pcn_gaussian.yaml  heatmap_esjd.ipynb
adaptive_smc/proposals/: MALA.py  mixture.py  pCNL.py  pCN_ARW.py  rw.py
tests/: test_g_prior_and_likelihood_adapt_schedule.py  test_g_prior_and_likelihood_random_walk_optimisation.py  test_gaussian_prior_and_likelihood.py
